--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,21 +5,188 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #2e2f42;
+}
+
+.link-back {
+  margin-bottom: 30px;
+}
+
+/* Timer Block */
+
+.timer-block {
+  padding-top: 26px;
+  padding-left: 156px;
+}
+
+.timer-input {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  padding-right: 16px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.timer-input:not([disabled]):hover {
+  border: 1px solid #000;
+}
+
+.timer-input:focus {
+  border: 1px solid #4e75ff;
+}
+
+.timer-input:disabled {
+  color: #808080;
+  border-color: #808080;
+}
+
+button {
+  font-family: 'Montserrat', sans-serif;
+  height: 40px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  margin-left: 8px;
+  border-radius: 8px;
+  background: #4e75ff;
+  color: #fff;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+button:not([disabled]):hover {
+  background-color: #6c8cff;
+}
+button[disabled]:hover {
+  cursor: not-allowed;
+}
+
+.timer {
+  display: flex;
+  gap: 24px;
+  margin-top: 32px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.value {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 40px;
+  line-height: 1.2;
+}
+
+.label {
+  text-transform: uppercase;
+}
+
+.active-btn {
+  color: #fff;
+  background-color: #4e75ff;
+}
+
+.timer-input[disabled]:hover {
+  cursor: not-allowed;
+}
+/* End Timer Block */
+form {
+  width: 360px;
+}
+.form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: flex-start;
+  margin-bottom: 16px;
+}
+
+input[name='delay'] {
+  box-sizing: border-box;
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  padding-right: 16px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input[name='delay']:not([disabled]):hover {
+  border: 1px solid #000;
+}
+
+input[name='delay']:focus {
+  border: 1px solid #4e75ff;
+}
+
+input[name='delay']:disabled {
+  color: #808080;
+  border-color: #808080;
+}
+
+fieldset {
+  box-sizing: border-box;
+  width: 360px;
+  display: flex;
+  gap: 48px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin: 0;
+  margin-bottom: 24px;
+  padding-left: 28px;
+}
+
+fieldset label {
+  display: flex;
+  gap: 13px;
+}
+label {
+  display: flex;
+  align-items: center;
+}
+
+input[name='state'] {
+  width: 19px;
+  height: 19px;
+  margin: 0;
+}
+
+.form-button {
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 500;
+
+  display: flex;
+  width: 360px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  border-radius: 8px;
+  margin: 0;
 }
